# WinLogonSamples

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/toolchain/: cross-msvc.cmake
scripts/: test.reg
src/: CMakeLists.txt
src/NoPasswordAuthPkg/: CMakeLists.txt  LSASecFuncTableImpl.h  Main.cpp  PrepareProfile.cpp  PrepareProfile.hpp  PrepareToken.cpp  PrepareToken.hpp  Utils.hpp
src/helpers/: CMakeLists.txt  Dll.cpp  Dll.h  Utilities.cpp  Utilities.h  helpers.cpp  helpers.h
src/sampleallcontrolscredentialprovider/: CMakeLists.txt  CSampleCredential.cpp  common.h
src/samplecredentialprovider/: CMakeLists.txt  CSampleCredential.cpp  common.h
src/samplecreduicredentialprovider/: CMakeLists.txt  common.h  csamplecredential.cpp
src/samplehardwareeventcredentialprovider/: CMakeLists.txt  CSampleCredential.cpp  CSampleProvider.cpp  CommandWindow.cpp  common.h
src/samplewrapexistingcredentialprovider/: CMakeLists.txt  CSampleCredential.cpp  CSampleCredential.h  CSampleProvider.cpp  CSampleProvider.h  CWrappedCredentialEvents.h  SampleWrapExistingCredentialProvider.def  common.h  guid.cpp  guid.h  resource.h  resources.rc
src/samplewrapexistingcredentialprovider/credential/: CSampleCredential.cpp  CSampleCredential.h
src/samplewrapexistingcredentialprovider/credential/events/: CWrappedCredentialEvents.cpp  CWrappedCredentialEvents.h
src/samplewrapexistingcredentialprovider/filter/: CSampleProviderFilter.cpp  CSampleProviderFilter.h
src/samplewrapexistingcredentialprovider/provider/: CSampleProvider.cpp  CSampleProvider.h  CSampleProviderAdvise.cpp  CSampleProviderCredential.cpp  CSampleProviderFieldDescriptor.cpp  CSampleProviderSetSerialization.cpp  CSampleProviderUsageScenario.cpp
